# groppy

./: AGENTS.md  Cargo.toml  README.md
docs/: README.md  STYLE_GUIDE.md  TODO.md  development.md  usage.md
src/: main.rs
